# persona-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  ruff.toml  run_api_server.py  setup.py
config/: llm_config.json  mcp_config.json
examples/: mcp_integration_example.py
examples/personas/: trump.yaml
src/persona_agent/: __init__.py  api.py  cli.py  http_api.py  llm_config.py  websocket_server.py
src/persona_agent/a2a/: __init__.py  agent_card.py  executor.py
src/persona_agent/api/: __init__.py  agent_factory.py  auth.py  config.py  dependencies.py  models.py  persona_manager.py  server.py
src/persona_agent/api/routes/: __init__.py  a2a.py  agent.py  persona.py  session.py
src/persona_agent/core/: __init__.py  agent_factory.py  persona_agent.py  persona_profile.py
src/persona_agent/llm/: __init__.py  client.py
src/persona_agent/mcp/: __init__.py  direct_connector.py  direct_mcp.py  mcp.py  mcp_manager.py  server_config.py  tool_adapter.py
src/persona_agent/tools/: __init__.py  mcp_connector.py  mcp_tool_registry.py
src/persona_agent/utils/: __init__.py  config_loader.py
tests/: test_auth.py  test_executor.py  test_persona_id_security.py
